$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-1 (opened February 9, 2010)

	* predict.cca, predict.rda: match 'newdata' by row names or column
	names in type = "wa" and type = "sp". This is similar as
	predict.prcomp/princomp. Gained choice type = "working" for
	working residuals (as fitted.cca/rda). 

	* simulate.rda, simulate.cca: gained argument rank passed to
	predict.rda() or predict.rda(). This also allows simulation under
	null model by setting rank = 0.

	* permatfull.Rd: fixed braces in the help file + mark-up.

Version 1.18-0 (closeed January 11, 2010 with release 1.17-0)

	* Documented na.action in cca.object.

	* Opened concurrently with copying 1.16-34 (at rev 1087) to
	branches/1.17 for a new release.

	* betadisper: 'type = "median"' is now the default type of
	analysis.

	* fieller.MOStest: removed erroneous multiplication of variances
	by overdispersion, because this was already done in cov.scaled,
	and therefore was doubled and gave much too wide (up to Infinite)
	limits. 

	* MOStest uses now ANODEV of free model and model where the
	hump/pit is forced to a given location instead of the test based
	on the Wald statistic (coefficient/sd) of the coefficient of the
	linear term. The ANODEV and Wald statistic are equivalent in
	Gaussian models, but in with other error families the ANODEV is
	more correct. This fix removes the conflict between the basic
	MOStest() and its profile() and confint() methods in non-Gaussian
	families. 

Version 1.16-34 (closed January 2, 2009) -- (codename: Lucia)

	* twostagechao: deleted, because question regarding the
	notation in the original article remained unanswered.

	* permat* cleanup: permat.control deleted, not needed any longer
	due to changes in oecosimu, documentation for plot.permat merged
	with permat* help page.

	* goodness.cca: was not using correct weights. Broken in r992 (Sep
	6, 2009).

	* vegdist: added UI for the alternative Gower index ("altGower")